--- a/style.css
+++ b/style.css
@@ -5,7 +5,13 @@ body {
 }
 
 .nav_bar{
-    background-color:black;
+    background-color:white;
     color:black;
-    padding:50px;
+    height:50px;
+    width:100%;
+    padding:30px;
+}
+
+.apple_logo{
+    width:20px;
 }
