--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     
 }
 
+
 .apple_logo{
     width:20px;
     padding:5px;
@@ -46,4 +47,91 @@ body {
 .shop_bag_icon{
     width:35px;
     height:30px;
+}
+
+.hero_section{
+    background-color:rgba(233, 230, 230, 0.664);
+    height:570px;
+    display:flex;
+}
+
+.brand_name{
+    margin-left:150px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size:55px;
+    margin-bottom:0px;
+}
+
+.brand_subtitle{
+    display:flex;
+    margin-left:495px;
+    font-size:25px;
+    margin-top:0px;
+}
+
+.brand_wrapper{
+    text-align:center;
+}
+
+.learnmore_button{
+    width:100px;
+    height:40px;
+    color:white;
+    background-color:hsl(231, 79%, 52%);
+    margin-left:150px;
+    border-radius:999px;
+    box-sizing:border-box;
+    border:20px;
+}
+.learnmore_button:hover{
+    background-color:hsl(231, 80%, 57%);
+    cursor:pointer;
+}
+
+.shopiphone_button{
+    color:hsl(231, 80%, 57%);
+    background-color:white;
+    width:100px;
+    height:40px;
+    border-radius:999px;
+    box-sizing:border-box;
+    border:20px;
+    margin-left:50px;
+}
+.shopiphone_button:hover{
+    cursor:pointer;
+    background-color:hsl(231, 80%, 57%);
+    color:white;
+}
+
+.brand_subtitle2{
+    font-size:larger;
+    background:linear-gradient(#2e8cd8,#2949bd);
+    -webkit-background-clip:text;
+    -webkit-text-fill-color:transparent;
+    margin-left:150px;
+}
+.gradient{
+    font-size:larger;
+    background:linear-gradient(#9025be,#be2550,#d8122e,#ec5d24,#ecb024);
+    -webkit-background-clip:text;
+    -webkit-text-fill-color:transparent;
+}
+
+.iphone_sale_picture{
+    display:flex;
+    align-items:start;
+    margin-left:150px;
+    justify-content: center;
+    height:800px;
+    overflow:hidden;
+}
+.iphone_sale_picture_wrap{
+    height:300px;
+    overflow:hidden;
+}
+.iphone_sale_picture_wrap img {
+    height:800px;
+    width:auto;
+    display:block;
 }
