--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ body {
 
 .hero_section{
     background-color:rgba(233, 230, 230, 0.664);
-    height:570px;
+    height:759px;
     display:flex;
 }
 
@@ -127,11 +127,90 @@ body {
     overflow:hidden;
 }
 .iphone_sale_picture_wrap{
-    height:300px;
+    height:500px;
     overflow:hidden;
 }
 .iphone_sale_picture_wrap img {
     height:800px;
     width:auto;
     display:block;
+}
+
+.second_div{
+    margin-top:10px;
+    background-color:rgba(233, 230, 230, 0.664);
+    height:759px;
+}
+
+.iphone_trade_img{
+    display:flex;
+    justify-content:center;
+    padding:0px;
+    width:1910px;
+    height:759px;
+    display:block;
+}
+
+.apple_logo2{
+    width:50px;
+    margin-left:775px;
+    display:flex:center;
+    justify-content:center;
+    top:830px;
+    position:absolute;
+}
+
+.trade_in{
+    margin-left:820px;
+    top:780px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size:55px;
+    position:absolute;
+}
+.trade_in_subtitle{
+    margin-left:750px;
+    top:875px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size:25px;
+    position:absolute;
+}
+.trade_in_subtitle2{
+    margin-left:765px;
+    top:900px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size:25px;
+    position:absolute;
+}
+.trade_in_subtitle3{
+    margin-left:845px;
+    top:950px;
+    color:rgb(114, 114, 114);
+    font-size:20px;
+    position:absolute;
+}
+.get_your_estimate{
+    width:125px;
+    height:40px;
+    top:1000px;
+    color:white;
+    background-color:hsl(231, 79%, 52%);
+    margin-left:855px;
+    border-radius:999px;
+    box-sizing:border-box;
+    border:20px;
+    position:absolute;
+}
+.get_your_estimate{
+    background-color:hsl(231, 80%, 57%);
+    cursor:pointer;
+}
+
+.third_div{
+    margin-top:10px;
+    background-color:rgba(233, 230, 230, 0.664);
+    height:759px;
+}
+
+.macbookair{
+    
 }
